#VERSION 0.9.4#

 - fixed debugbar.js to not load jquery when it's already loaded
 - modified function _autoloadAppBaseCustom() to support parent models in case of customs app models folder in autoload.php
 - fixed method count() to support where string correctly in Peak_Model_Zendatable
 - fixed methods calculate() and _getData() to handle correctly pages when no result in class Peak_Model_Pagination
 - added some punctuations to _filter_text() in class Peak_Filters_Advanced
 - added method _filter_date() to class Peak_Filters_Advanced
 - added method _filter_url() to class Peak_Filters_Advanced

#VERSION 0.9.3#

 - method dispatchActionParams() is no more experimental in Peak_Controller_Action
 - changed property $actions_with_params to true by default in Peak_Controller_Action
 - added method noRender() in class Peak_View for disabling view rendering and modified method render() to support this.
 - fixed the call of Peak_Registry::obj() to Peak_Registry::o() in Peak_Lang
 - fixed a method name error in Peak_Model_Zendatable
 - fixed unwanted double slashes of server request uri in Peak_Router::getRequestURI()
 - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
 - updated vendor twitter bootstrap 
 - added a new exception constant in Peak_Controller_Exception 
 - added method dispatchActionParams() and property $actions_with_params in Peak_Controller_Action. This allow us, when activated,
   to call actions with arguments directly and force action url to have those arguments instead of checking them with property
   $params and method params() inside action method. Note that this mode is more strict and force url to contains those params for
   a specific action.
 - fixed an illegal string offset bug in Peak_Core::initConfig() for PHP 5.4
 - added methods addValidateFilter() and addValidateFilters() in Peak_Filters_Advanced
 - added method calculate() in Peak_Model_Pagination