@@ -1,5 +1,8 @@
 #VERSION 0.9.4#
 
+ - fixed view helper debugbar to not show when rendering is disable
+ - deleted previously introducted noRender() in Peak_View and added methods instead of canRender(), disableRender() and 
+   enableRender() and modified method render()
  - fixed debugbar.js to not load jquery when it's already loaded
  - modified function _autoloadAppBaseCustom() to support parent models in case of customs app models folder in autoload.php
  - fixed method count() to support where string correctly in Peak_Model_Zendatable
